--- a/5.perfil-usuario/style.css
+++ b/5.perfil-usuario/style.css
@@ -5,11 +5,15 @@
     font-family: Arial, Helvetica, sans-serif;
 }
 
+body{
+    
+}
+
 .contenedor{
     display: flex;
     justify-content: center;
     align-items: center;
-    margin-top: 100px;
+    height: 100vh;
 }
 .card{
     display: flex;
